# DesignPatterns

./: README.md  docker-compose.yml  pullrequest.txt  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/autopr/: pullrequest.txt
.github/workflows/: ci.yml
docs/: README.md  oop-principles.md  pattern_overview.md
docs/behavioral_patterns/: behavioral_patterns.md
docs/creational_patterns/: creational_patterns.md
docs/structural_patterns/: structural_patterns.md
src/patterns/behavioral/: chain_of_responsibility.py  command.py  interpreter.py  iterator.py  mediator.py  memento.py  observer.py  state.py  strategy.py  template_method.py  visitor.py
src/patterns/creational/: __init__.py  abstract_factory.py  builder.py  factrory_method.py  prototype.py  singleton.py
src/patterns/structural/: adapter.py  bridge.py  composite.py  decorator.py  facade.py  flyweight.py  proxy.py
src/utils/: __init__.py  container.py  singleton.py  stdout_var.py
