[tool.poetry]
name = "DesignPatterns"
version = "0.1.0"
description = ""
authors = ["ARM"]
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
pep8-naming = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
