[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["ARM"]
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
